# aiskill-dpdk-latency-flamegraph

./: .gitignore  README.md  pyproject.toml  test_dryrun.py
docs/: ai_prompt.txt
dpdk_fg/: __init__.py  cli.py  enhance_svg.py  parse_latency.py  profile.py  topology.py
dpdk_fg/profiles/: dpdk.json  generic.json  kernel-net.json  lock.json  ssl.json
examples/: sample_amd_topology_raw.json  sample_funclatency.txt
tests/: test_topology.py  test_uprobe.py
