[project]
name = "dpdk-topology-latency-flamegraph"
version = "0.2.0"
description = "Enhance FlameGraph with target-profile coloring, funclatency, topology, and kernel interaction — supports DPDK, SSL, lock contention, and user-defined targets"
requires-python = ">=3.9"

[project.scripts]
dpdk-fg = "dpdk_fg.cli:main"
